# m2-poursuite-cible-cpp

./: CMakeLists.txt  main.cpp
model/: Image.cpp  Image.hpp
view/: ImageStreamWidget.cpp  ImageStreamWidget.hpp  ImageWidget.cpp  ImageWidget.hpp  MainWindow.cpp  MainWindow.hpp  WorkerThread.cpp  WorkerThread.hpp
